	  strings, bidirectional samples, and disabled default panning.
	- Faster IT loading by buffering pattern, sample, and comment reads.
	- Fix loop detection edge cases broken by S3M/IT marker scan bugs.
	- Fix out-of-bounds reads in His Master's Noise Mupp instruments.
	- Fix slow ProWizard testing.
	- Replace rand() with a built-in reentrant alternative.
	Changes by Thomas Neumann:
	- Fix XM envelope handling
	- Bug fixes to DSMI loader
	- Fix 16-bit sample check in MultiTracker loader
	- Fix finetune in MultiTracker loader
	Changes by Saga Musix:
	- S3M: Detect PlayerPRO, Velvet Studio and old MPT versions
	Changes by ds-sloth:
	- Optimize scan code for common case of no effects
	Changes by Misty De Méo:
	- Filter off html files when reading archives.
	Changes by Ozkan Sezer:
	- Change lha depacker to use a stripped down version of lhasa.
	- Merge several CVE fixes to depackers stb_vorbis backend.
	- Make the lite version buildable from git or full distribution.
	- Build system fixes and clean-ups. Misc code clean-ups.

4.6.0 (20230615):
	Changes by Alice Rowan:
	- Add Astroidea XMF format loader.
	- Implement S3M and IT mix volume.
	- Add IT MIDI macro filter effects support.
	- Fix for IT filter cutoff 127 on new note behavior.
	- Add missing IT filter clamp to mixer loops.
	- Fix IT duplicate note check to use the key prior to transpose.
	- Fix multiple IT playback bugs affecting, e.g. Atomic Playboy.
	- Fix IT tone portamento and offset.
	- Fix reverse sustain loop release bug, add IT effect S9F support.
	- Add Modplug ADPCM4 support for Impulse Tracker modules.
	- Improve anticlick performance and fix anticlick filter volume bug.
	- IT fade envelope reset should only affect volume envelope.
	- Fix Impulse Tracker envelope and fadeout order.
	- Replace bidirectional loop unrolling with reverse sample rendering.
	- Fix crash when xmp_set_row() is used on an IT end marker.
	- Fix NNA and tone portamento interaction with sample changes.