@@ -79,5 +79,6 @@ void	libxmp_mixer_setnote	(struct context_data *, int, int);
 void	libxmp_mixer_setperiod	(struct context_data *, int, double);
 void	libxmp_mixer_release	(struct context_data *, int, int);
 void	libxmp_mixer_reverse	(struct context_data *, int, int);
+int	libxmp_mixer_get_ticksize(int freq, double time_factor, double rrate, int bpm);
 
 #endif /* LIBXMP_MIXER_H */
