@@ -7,6 +7,10 @@ Stable versions
 	- Faster IT loading by buffering pattern, sample, and comment reads.
 	- Fix loop detection edge cases broken by S3M/IT marker scan bugs.
 	- Replace rand() with a built-in reentrant alternative.
+        - xmp_set_tempo_factor now returns -XMP_ERROR_STATE when called prior
+          to xmp_start_player (instead of causing crashes).
+        - Fix mixer crashes caused by previously valid tempo factors after
+          sample rate or BPM changes.
 	Changes by Thomas Neumann:
 	- Fix XM envelope handling
 	Changes by ds-sloth:
